crates/math-core/tests/snapshots/custom_cmd_test__global_let_doubled.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\global\\global\\let\\a\\alpha\n\\a"
---
<math>
    <mi>α</mi>
</math>
