crates/math-core/tests/snapshots/custom_cmd_test__global_let_in_global_group.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\zzz\\zzzz"
---
<math>
    <mi>z</mi>
    <mi>z</mi>
</math>
