crates/math-core/tests/snapshots/custom_cmd_test__global_let_to_builtin.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\global\\let\\a\\alpha\n\\a"
---
<math>
    <mi>α</mi>
</math>
