crates/math-core/tests/snapshots/custom_cmd_test__global_let_to_builtin_with_args.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\global\\let\\f\\frac\n\\f{1}{2}"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
