crates/math-core/tests/snapshots/custom_cmd_test__global_let_to_config_cmd.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\global\\let\\c\\cfgcmd\n\\c"
---
<math>
    <mi>ℂ</mi>
</math>
