crates/math-core/tests/snapshots/custom_cmd_test__global_let_to_local_cmd.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\zzz}{z}\\global\\let\\zzzz\\zzz\n\\zzzz"
---
<math>
    <mi>z</mi>
</math>
