crates/math-core/tests/snapshots/custom_cmd_test__late_resolution_across_snippets.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\foo"
---
<math>
    <mi>e</mi>
</math>
